--- a/S7/src/index.html
+++ b/S7/src/index.html
@@ -11,7 +11,6 @@
     </style>
   </head>
 
-  <body>
-    <script src="sistema-solar.js"></script>
-  </body>
+  <script src="sistema-solar.js"></script>
+  <body></body>
 </html>
