--- a/S11/src/index.html
+++ b/S11/src/index.html
@@ -9,6 +9,6 @@
     <div id="app"></div>
 
     <!--S10-->
-    <!-- <script src="script_45_ammo.js" type="module"></script> -->
+    <script src="script.js" type="module"></script>
   </body>
 </html>
